# ficha_banka

./: .gitignore  README.md  conftest.py  pyproject.toml
data/: transaction_loader.py  transactions.csv
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_main_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html  z_a44f0ac069e85531_tests_masks_py.html
src/: .env.example  decorators.py  generators.py  main.py  masks.py  processing.py  widget.py
src/analysis/: additional_analytics.py  analytics.py  transaction_analyzer.py
src/data/: transaction_loader.py
src/external_api/: external_api.py
src/file_operations/: file_operations.py
src/utils/: utils.py
tests/: conftest.py  test_analysis.py  test_external_api.py  test_file_operations.py  test_generators.py  test_log.py  test_processing.py  test_utils.py  test_widget.py  tests_masks.py
